--- a/src/full_node_view/FullNodeView.module.css
+++ b/src/full_node_view/FullNodeView.module.css
@@ -6,3 +6,36 @@
   width: 1.2rem;
   height: 1.2rem;
 }
+
+.toolbar_col {
+  max-width: 4.4rem;
+  padding: 0.5rem;
+}
+
+.node_refs {
+  float: right;
+}
+
+.note_col {
+  max-width: 42rem;
+  min-width: 24rem;
+  padding: 0.5rem;
+}
+
+.refs_col {
+  padding: 0.5rem;
+}
+
+.on_card_btn {
+  border-width: 1px;
+  border-radius: 5px;
+  margin-left: 0.4rem;
+  padding: 0.4rem;
+
+  background-color: #f8f9fa;
+}
+
+.on_card_btn:hover {
+  border: 1px solid #888888;
+  box-shadow: 1px 1px #888888;
+}
